Android中通过反射的方式判断U盘是否真正挂载
通过反射利用源码中的StorageManager.java类中的方法来实现判断U盘是否真正挂载

--- a/AIDLdemo/SimpleJarClient/res/values/strings.xml
+++ b/AIDLdemo/SimpleJarClient/res/values/strings.xml
@@ -28,6 +28,8 @@
 	<string name="version_stop">暂停</string>
 	<string name="version_quit">退出</string>
 	
+	<string name="usb_check">检测USB是否存在</string>
+	
 	<string name="music_str">music</string>
     <string name="music_title">title</string>
     <string name="music_artist">artist</string>
