--- a/HelloJNI/res/values/strings.xml
+++ b/HelloJNI/res/values/strings.xml
@@ -4,5 +4,5 @@
     <string name="app_name">HelloJNI</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
-
+	<string name="action_jni">JNI</string>
 </resources>
